[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUI/Themes/grey.tres" type="Theme" id=1]
[ext_resource path="res://GUI/SortableTable/SortableTable.gd" type="Script" id=2]
[ext_resource path="res://GUI/SortableTable/TopRow/TopRow.gd" type="Script" id=3]
[ext_resource path="res://GUI/SortableTable/RowContainerFilled.gd" type="Script" id=4]
[ext_resource path="res://GUI/SortableTable/SortableTableRow.tscn" type="PackedScene" id=5]
[ext_resource path="res://GUI/SortableTable/RowContainerEmpty.gd" type="Script" id=6]

[node name="SortableTable" type="ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_top = 54.0
margin_right = 675.0
margin_bottom = 309.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = false
scroll_vertical = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Grow Direction", "Margin", "Mouse", "Rect", "Scroll", "Size Flags", "Theme", "Visibility" ]
column_names = [ "Please set up your columns" ]
column_widths = [ 100 ]
sort_column = 1
row_height = 30
row_color = Color( 0.235294, 0.235294, 0.235294, 1 )
row_color_selected = Color( 0.584314, 0.384314, 0.282353, 1 )
row_brightness_difference = 0.05
hover_brightness_boost = 0.1

[node name="VBox_TopRow_Content" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 615.0
margin_bottom = 255.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="TopRow" type="MarginContainer" parent="VBox_TopRow_Content" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 615.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 3 )
_sections_unfolded = [ "Margin", "Mouse", "Rect", "Size Flags", "custom_constants" ]

[node name="Panel" type="Panel" parent="VBox_TopRow_Content/TopRow" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 615.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Margin", "Rect", "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="VBox_TopRow_Content/TopRow" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 615.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="RowScrollContainer" type="ScrollContainer" parent="VBox_TopRow_Content" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 615.0
margin_bottom = 255.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Mouse", "Scroll", "Size Flags" ]

[node name="VBoxContainer" type="VBoxContainer" parent="VBox_TopRow_Content/RowScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 615.0
margin_bottom = 235.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="RowContainerFilled" type="VBoxContainer" parent="VBox_TopRow_Content/RowScrollContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 615.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 0
script = ExtResource( 4 )
_sections_unfolded = [ "Mouse", "custom_constants" ]

[node name="SortabelTableRow" parent="VBox_TopRow_Content/RowScrollContainer/VBoxContainer/RowContainerFilled" index="0" instance=ExtResource( 5 )]

margin_top = 0.0
margin_right = 615.0
margin_bottom = 30.0

[node name="SortabelTableRow2" parent="VBox_TopRow_Content/RowScrollContainer/VBoxContainer/RowContainerFilled" index="1" instance=ExtResource( 5 )]

margin_top = 30.0
margin_right = 615.0
margin_bottom = 60.0

[node name="SortabelTableRow3" parent="VBox_TopRow_Content/RowScrollContainer/VBoxContainer/RowContainerFilled" index="2" instance=ExtResource( 5 )]

margin_top = 60.0
margin_right = 615.0
margin_bottom = 90.0

[node name="SortabelTableRow4" parent="VBox_TopRow_Content/RowScrollContainer/VBoxContainer/RowContainerFilled" index="3" instance=ExtResource( 5 )]

margin_top = 90.0
margin_right = 615.0
margin_bottom = 120.0

[node name="SortabelTableRow5" parent="VBox_TopRow_Content/RowScrollContainer/VBoxContainer/RowContainerFilled" index="4" instance=ExtResource( 5 )]

margin_top = 120.0
margin_right = 615.0
margin_bottom = 150.0

[node name="ClipContainerForEmptyRows" type="Container" parent="VBox_TopRow_Content/RowScrollContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 150.0
margin_right = 615.0
margin_bottom = 235.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Mouse", "Rect", "Size Flags" ]

[node name="RowContainerEmpty" type="VBoxContainer" parent="VBox_TopRow_Content/RowScrollContainer/VBoxContainer/ClipContainerForEmptyRows" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 0
script = ExtResource( 6 )
_sections_unfolded = [ "Mouse", "custom_constants" ]

[connection signal="draw" from="." to="." method="_on_SortableTable_draw"]

[connection signal="gui_input" from="." to="." method="_on_SortableTable_gui_input"]

[connection signal="resized" from="VBox_TopRow_Content/RowScrollContainer/VBoxContainer/ClipContainerForEmptyRows" to="VBox_TopRow_Content/RowScrollContainer/VBoxContainer/ClipContainerForEmptyRows/RowContainerEmpty" method="_on_ClipContainerForEmptyRows_resized"]


